--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ authors = [{name = "ClericPy", email = "clericpy@gmail.com"}]
 readme = "README.md"
 license = {file = "LICENSE"}
 classifiers = ["License :: OSI Approved :: MIT License"]
-dynamic = ["version", "description"]
+dynamic = ["version"]
+description = "Things which I thought should be set in builtins."
+requires-python = ">=3.7"
 
 [project.urls]
 Home = "https://github.com/ClericPy/morebuiltins"
