--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -1,6 +1,10 @@
 name: Python package
 
-on: [push]
+on:
+    push:
+        branches:
+            - main
+            - master
 
 jobs:
     test-linux:
@@ -9,7 +13,7 @@ jobs:
             max-parallel: 3
             matrix:
                 python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-
+        timeout-minutes: 3
         steps:
             - uses: actions/checkout@v4
             - name: Set up Python ${{ matrix.python-version }}
@@ -26,7 +30,7 @@ jobs:
             max-parallel: 3
             matrix:
                 python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-
+        timeout-minutes: 3
         steps:
             - uses: actions/checkout@v4
             - name: Set up Python ${{ matrix.python-version }}
@@ -43,7 +47,7 @@ jobs:
             max-parallel: 3
             matrix:
                 python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-
+        timeout-minutes: 3
         steps:
             - uses: actions/checkout@v4
             - name: Set up Python ${{ matrix.python-version }}
