--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -12,7 +12,7 @@ jobs:
         strategy:
             max-parallel: 3
             matrix:
-                python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+                python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.x"]
         timeout-minutes: 3
         steps:
             - uses: actions/checkout@v4
@@ -29,7 +29,7 @@ jobs:
         strategy:
             max-parallel: 3
             matrix:
-                python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+                python-version: ["3.x"]
         timeout-minutes: 3
         steps:
             - uses: actions/checkout@v4
@@ -46,7 +46,7 @@ jobs:
         strategy:
             max-parallel: 3
             matrix:
-                python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+                python-version: ["3.x"]
         timeout-minutes: 3
         steps:
             - uses: actions/checkout@v4
